app html, css, img

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
 </head>
 <body>
 	<header>
-
+		<nav>
+			<ul>
+				<li><a href="#">Collections</a></li>
+				<li><a href="#">Products</a></li>
+				<li><a href="#">Inspiration</a></li>
+				<li><a href="#">About us</a></li>
+				<li><a href="#">Find a dealer</a></li>
+			</ul>
+		</nav>
+		<div id="logo">
+			<h1>Lasting</h1>
+			<h1>memories</h1>
+		</div>
 	</header>
 	<main>
 
