--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
 		</div>
 	</header>
 	<main>
-
+		<div class="tables">
+			<div class="tables-text">
+				<h2>Making</h2>
+				<h2>tables</h2>
+				<h2>heroes</h2>
+				<p>Chairs, cabinets, but especially tables by Joli are durable products, designed to last and to be used intensively.</p>
+				<div class="tables-buttons">
+					<button><a href="#">About us</a></button>
+					<button><a href="#">Collections</a></button>
+				</div>
+			</div>
+			<div class="tables-image"></div>
+		</div>
 	</main>
 	<footer>
 
