upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
 					<button><a href="#">Collections</a></button>
 				</div>
 			</div>
-			<div class="tables-image"></div>
+			<div class="tables-image">
+				<img src="img/tables-1.jpg" alt="" id="tables-1">
+				<img src="img/tables-2.jpg" alt="" id="tables-2">
+				<img src="img/tables-3.jpg" alt="" id="tables-3">
+				<span>Region</span>
+			</div>
 		</div>
+
 	</main>
 	<footer>
 
