upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 				<span>Region</span>
 			</div>
 		</div>
+		<div class="collections">
+			<h2>Our<br>collections</h2>
+
+		</div>
 
 	</main>
 	<footer>
