--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 	</header>
 	<main>
-		<div class="tables">
+		<section class="tables">
 			<div class="tables-text">
 				<h2>Making<br>tables<br>heroes</h2>
 				<p>Chairs, cabinets, but especially tables by Joli are durable products, designed to last and to be used intensively.</p>
@@ -37,12 +37,21 @@
 				<img src="img/tables-3.jpg" alt="" id="tables-3">
 				<span>Region</span>
 			</div>
-		</div>
-		<div class="collections">
+		</section>
+		<section class="collections">
 			<h2>Our<br>collections</h2>
 
-		</div>
-
+		</section>
+		<section class="tables">
+			<div class="tables-text">
+				<h2>Find a<br>dealer</h2>
+				<p>We work together with dealers in 19 countries, all over the world. Find out which one is closest to you.</p>
+				<form>
+					<label for="location">Your location</label><input type="text" name="location" id="location">
+					<button type="submit">Search</button>
+				</form>
+			</div>
+		</section>
 	</main>
 	<footer>
 
