upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<h2>Find a<br>dealer</h2>
 				<p>We work together with dealers in 19 countries, all over the world. Find out which one is closest to you.</p>
 				<form>
-					<label for="location">Your location</label><input type="text" name="location" id="location">
+					<label for="location"></label><input type="text" name="location" id="location" placeholder="Your location">
 					<button type="submit">Search</button>
 				</form>
 			</div>
