--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
 			<h2>Our<br>collections</h2>
 
 		</section>
-		<section class="tables">
+		<section class="tables dealer">
 			<div class="tables-text">
 				<h2>Find a<br>dealer</h2>
 				<p>We work together with dealers in 19 countries, all over the world. Find out which one is closest to you.</p>
 				<form>
 					<label for="location"></label><input type="text" name="location" id="location" placeholder="Your location">
+					<br>
 					<button type="submit">Search</button>
 				</form>
 			</div>
+			<div class="tables-image dealer-img"></div>
 		</section>
 	</main>
 	<footer>
