upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 			</div>
 			<div class="tables-image dealer-img"></div>
 		</section>
+		<section class="inspire">
+			<h3>Terrace <br>Ceremonies & Meetings</h3>
+			<button class="inspire-btn">Inspire me</button>
+		</section>
 	</main>
 	<footer>
 
