upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 			<div class="tables-image dealer-img"></div>
 		</section>
 		<section class="inspire">
+			<img src="img/inspire-img-1.jpg" alt="" class="inspire-img" id="inspire-img-1">
+			<img src="img/inspire-img-2.jpg" alt="" class="inspire-img" id="inspire-img-2">
+			<img src="img/inspire-img-3.jpg" alt="" class="inspire-img" id="inspire-img-3">
 			<h3>Terrace <br>Ceremonies & Meetings</h3>
 			<button class="inspire-btn">Inspire me</button>
-
 		</section>
 	</main>
 	<footer>
