upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
 			<h3>Terrace <br>Ceremonies & Meetings</h3>
 			<button class="inspire-btn">Inspire me</button>
 		</section>
+		<section class="about">
+			<h4>Joli manages to <br>offer designs <br>that are both <br>timelessly modern <br>and trendy</h4>
+			<button class="about-btn">about us</button>
+		</section>
+		<section class="tables become">
+			<div class="tables-image become-image"></div>
+			<div class="tables-text">
+				<h2>Become a <br>dealer</h2>
+				<p>Do you want to become a Joli retailer? Please submit the following form and we will contact you!</p>
+				<button id="become-btn">Learn more</button>
+			</div>
+		</section>
 	</main>
 	<footer>
 
