upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 				<button id="become-btn">Learn more</button>
 			</div>
 		</section>
+		<section class="tables">
+			<div class="tables-image" id="people-img">
+				<img src="img/people-img.jpg" alt="">
+			</div>
+		</section>
 	</main>
 	<footer>
 
