upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -69,13 +69,24 @@
 			<div class="tables-image become-image"></div>
 			<div class="tables-text">
 				<h2>Become a <br>dealer</h2>
-				<p>Do you want to become a Joli retailer? Please submit the following form and we will contact you!</p>
+				<p>Do you want to become a Joli retailer? Please submit the following form, and we will contact you!</p>
 				<button id="become-btn">Learn more</button>
 			</div>
 		</section>
 		<section class="tables">
 			<div class="tables-image" id="people-img">
 				<img src="img/people-img.jpg" alt="">
+			</div>
+		</section>
+		<section class="request">
+			<div class="request__text_header"><h5>Request our <br>2022 catalogue.</h5></div>
+			<div class="request-left">
+				<div class="request__text"><p>Email address <span>*</span></p></div>
+				<form class="mail-form">
+					<label for="mail"></label><input type="email" name="mail" id="mail">
+					<input type="checkbox" name="cookie" id="cookie"><label for="cookie" id="cookie-label">I agree with the <a href="#">Privacy & Cookie Policy</a> of Joli</label>
+					<button type="submit">Send</button>
+				</form>
 			</div>
 		</section>
 	</main>
