upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 		<section class="request">
 			<div class="request__text_header"><h5>Request our <br>2022 catalogue.</h5></div>
 			<div class="request-left">
-				<div class="request__text"><p>Email address <span>*</span></p></div>
+				<div class="request__text"><p>email address <span>*</span></p></div>
 				<form class="mail-form">
-					<label for="mail"></label><input type="email" name="mail" id="mail">
-					<input type="checkbox" name="cookie" id="cookie"><label for="cookie" id="cookie-label">I agree with the <a href="#">Privacy & Cookie Policy</a> of Joli</label>
-					<button type="submit">Send</button>
+					<label for="mail"></label><input type="email" name="mail" id="mail"><br>
+					<input type="checkbox" name="cookie" id="cookie" class="custom-checkbox"><label for="cookie" id="cookie-label">I agree with the <a href="#"> Privacy & Cookie Policy </a> of Joli</label>
+					<button type="submit" class="mail-form__btn">Send</button>
 				</form>
 			</div>
 		</section>
