upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 				<li><a href="#">Find a dealer</a></li>
 			</ul>
 		</nav>
-		<div id="logo">
+		<div id="name">
 			<h1>Lasting</h1>
 			<h1>memories</h1>
 		</div>
+		<div class="logo header__logo"><img src="img/logotip.svg"></div>
 	</header>
 	<main>
 		<section class="tables">
@@ -91,8 +92,69 @@
 		</section>
 	</main>
 	<footer>
+		<div class="footer__logo"><img src="img/logotip.svg"></div>
+		<div class="footer__content">
+			<div class="footer__content-top">
+				<div class="footer__collections">
+					<div class="name">collections</div>
+					<div class="footer__content__elems">
+						<ul>
+							<li><a href="#"></a></li>
+							<li><a href="#"></a></li>
+							<li><a href="#"></a></li>
+							<li><a href="#"></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="products">
+					<div class="name">products</div>
+					<div class="footer__content__elems">
+						<ul>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="inspiration">
+					<div class="name">inspiration</div>
+					<div class="footer__content__elems">
+						<ul>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="about-us">
+					<div class="name">about-us</div>
+					<div class="footer__content__elems">
+						<ul>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="contact">
+					<div class="name">contact</div>
+					<div class="footer__content__elems">
+						<ul>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+							<li><a href=""></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="footer__content-bottom">
 
-
+			</div>
+		</div>
 
 
 
