--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1>Lasting</h1>
 			<h1>memories</h1>
 		</div>
-		<div class="logo header__logo"><img src="img/logotip.svg"></div>
+		<div class="logo header__logo"><img src="img/logotip.svg" alt=""></div>
 	</header>
 	<main>
 		<section class="tables">
@@ -92,7 +92,7 @@
 		</section>
 	</main>
 	<footer>
-		<div class="footer__logo"><img src="img/logotip.svg"></div>
+		<div class="footer__logo"><img src="img/logotip.svg" alt=""></div>
 		<div class="footer__content">
 			<div class="footer__content-top">
 				<div class="footer__collections">
