upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 					<div class="name">collections</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href="#"></a></li>
-							<li><a href="#"></a></li>
-							<li><a href="#"></a></li>
-							<li><a href="#"></a></li>
+							<li><a href="#">Wire</a></li>
+							<li><a href="#">Curve</a></li>
+							<li><a href="#">Fizz</a></li>
+							<li><a href="#">Marguerite</a></li>
 						</ul>
 					</div>
 				</div>
@@ -110,10 +110,10 @@
 					<div class="name">products</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
+							<li><a href="">Tables</a></li>
+							<li><a href="">Chairs</a></li>
+							<li><a href="">Cabinets</a></li>
+							<li><a href="">Accessories</a></li>
 						</ul>
 					</div>
 				</div>
@@ -121,10 +121,9 @@
 					<div class="name">inspiration</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
+							<li><a href="">Joli Days 2022</a></li>
+							<li><a href="">Terrace</a></li>
+							<li><a href="">Ceremonies & Meetings</a></li>
 						</ul>
 					</div>
 				</div>
@@ -132,10 +131,10 @@
 					<div class="name">about-us</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
+							<li><a href="">Materials</a></li>
+							<li><a href="">Find a dealer</a></li>
+							<li><a href="">Professionals</a></li>
+							<li><a href="">News</a></li>
 						</ul>
 					</div>
 				</div>
@@ -143,10 +142,9 @@
 					<div class="name">contact</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
-							<li><a href=""></a></li>
+							<li><a href="">Industrielaan 5</a></li>
+							<li><a href="">8520 Kortrijk</a></li>
+							<li><a href="">info@joli.be</a></li>
 						</ul>
 					</div>
 				</div>
