upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<div class="footer__logo"><img src="img/logotip.svg" alt=""></div>
 		<div class="footer__content">
 			<div class="footer__content-top">
-				<div class="footer__collections">
+				<div class="footer__collections footer__content-top_column">
 					<div class="name">collections</div>
 					<div class="footer__content__elems">
 						<ul>
@@ -106,7 +106,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="products">
+				<div class="products footer__content-top_column">
 					<div class="name">products</div>
 					<div class="footer__content__elems">
 						<ul>
@@ -117,7 +117,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="inspiration">
+				<div class="inspiration footer__content-top_column">
 					<div class="name">inspiration</div>
 					<div class="footer__content__elems">
 						<ul>
@@ -127,7 +127,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="about-us">
+				<div class="about-us footer__content-top_column">
 					<div class="name">about-us</div>
 					<div class="footer__content__elems">
 						<ul>
@@ -138,7 +138,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="contact">
+				<div class="contact footer__content-top_column">
 					<div class="name">contact</div>
 					<div class="footer__content__elems">
 						<ul>
