upgrade html, css, img

--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
 		</section>
 	</main>
 	<footer>
-		<div class="footer__logo"><img src="img/logotip.svg" alt=""></div>
+		<div class="footer__logo"><object
+						type="image/svg+xml"
+						data="img/logotip.svg">
+			<img src="img/logotip.svg" alt="">
+		</object></div>
 		<div class="footer__content">
 			<div class="footer__content-top">
 				<div class="footer__collections footer__content-top_column">
@@ -110,10 +114,10 @@
 					<div class="name">products</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href="">Tables</a></li>
-							<li><a href="">Chairs</a></li>
-							<li><a href="">Cabinets</a></li>
-							<li><a href="">Accessories</a></li>
+							<li><a href="#">Tables</a></li>
+							<li><a href="#">Chairs</a></li>
+							<li><a href="#">Cabinets</a></li>
+							<li><a href="#">Accessories</a></li>
 						</ul>
 					</div>
 				</div>
@@ -121,9 +125,9 @@
 					<div class="name">inspiration</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href="">Joli Days 2022</a></li>
-							<li><a href="">Terrace</a></li>
-							<li><a href="">Ceremonies & Meetings</a></li>
+							<li><a href="#">Joli Days <br> 2022</a></li>
+							<li><a href="#">Terrace</a></li>
+							<li><a href="#">Ceremonies <br> & Meetings</a></li>
 						</ul>
 					</div>
 				</div>
@@ -131,10 +135,10 @@
 					<div class="name">about-us</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href="">Materials</a></li>
-							<li><a href="">Find a dealer</a></li>
-							<li><a href="">Professionals</a></li>
-							<li><a href="">News</a></li>
+							<li><a href="#">Materials</a></li>
+							<li><a href="#">Find a dealer</a></li>
+							<li><a href="#">Professionals</a></li>
+							<li><a href="#">News</a></li>
 						</ul>
 					</div>
 				</div>
@@ -142,15 +146,18 @@
 					<div class="name">contact</div>
 					<div class="footer__content__elems">
 						<ul>
-							<li><a href="">Industrielaan 5</a></li>
-							<li><a href="">8520 Kortrijk</a></li>
-							<li><a href="">info@joli.be</a></li>
+							<li><a href="#">Industrielaan 5</a></li>
+							<li><a href="#">8520 Kortrijk</a></li>
+							<li><a href="mailto:info@joli.be">info@joli.be</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="footer__content-bottom">
-
+				<div class="footer__content-bottom_elem">Privacy & <br> Cookie Policy</div>
+				<div class="footer__content-bottom_elem">Disclaimer</div>
+				<div class="footer__content-bottom_elem">made by skinn</div>
+				<div class="footer__content-bottom_elem"></div>
 			</div>
 		</div>
 
